--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "my-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://howardwang15.github.io",
   "dependencies": {
+    "gh-pages": "^1.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.3.1",
@@ -13,6 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
