--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "homepage": "https://howardwang15.github.io",
   "dependencies": {
     "gh-pages": "^1.2.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-flipcard-2": "^0.3.2",
+    "react-redux": "^7.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "react-transition-group": "^4.3.0",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
